--- a/pom.xml
+++ b/pom.xml
@@ -6,4 +6,17 @@
   <version>1.0-SNAPSHOT</version>
   <name>Archetype - tensorflowdemo</name>
   <url>http://maven.apache.org</url>
+
+  <dependencies>
+    <dependency>
+      <groupId>org.tensorflow</groupId>
+      <artifactId>tensorflow</artifactId>
+      <version>1.15.0</version>
+    </dependency>
+  </dependencies>
+
+  <build>
+    <sourceDirectory>src/main/java</sourceDirectory>
+  </build>
+
 </project>
